--- a/Meeting Notes/Meeting 1 10.8
+++ b/Meeting Notes/Meeting 1 10.8
@@ -4,3 +4,14 @@ Notes
 
 1. Phone Group chat 
 
+2. Best idea Spinning music box 
+
+3. Weekly group meeting
+
+        SAt after 5
+        Sun whenever 
+        Any day after 6
+        
+  
+
+      
