--- a/Meeting Notes/Meeting 1 10.8
+++ b/Meeting Notes/Meeting 1 10.8
@@ -12,6 +12,27 @@ Notes
         Sun whenever 
         Any day after 6
         
+4. Skills:
+
+Lee
+	• Eagle CAD: PCB Design 
+	• Testing
+Alex
+	• Assembly
+	• C
+	• C++
+YU
+	• Coding
+	• Building PCB
+Me
+	• Documentation
+	• Meeting Notes
+	• Getting Parts
+	• Testing
+	• soldering
+	
+
+        
   
 
       
